# doors-excel-tool

./: .gitignore  .lsp.json  README.md  main.py  pyproject.toml
docs/: codebase_structure.md  requirements.md  technologies.md  ui_specification.md
src/doors_excel/: __init__.py  __main__.py
src/doors_excel/api/: __init__.py  diff.py  export.py  import_.py  rollback.py  sessions.py  staging.py  validate.py
src/doors_excel/cli/: __init__.py  app.py  output.py
src/doors_excel/common/: __init__.py  constants.py  exceptions.py  logging.py  types.py
src/doors_excel/core/: __init__.py
src/doors_excel/core/diff/: __init__.py  conflict.py  engine.py  summary.py
src/doors_excel/core/transformation/: __init__.py  hashing.py  image_placeholders.py  markdown_to_rtf.py  ole_detection.py  rtf_parser.py  rtf_to_markdown.py  smart_split.py
src/doors_excel/core/validation/: __init__.py  models.py  validator.py
src/doors_excel/gui/: __init__.py  main.py
src/doors_excel/infrastructure/: __init__.py
src/doors_excel/resources/: __init__.py
tests/: conftest.py  test_project_meta.py  test_structure.py
tests/unit/: test_main.py
tests/unit/api/: conftest.py  test_api_init.py  test_bulk_export.py  test_bulk_import.py  test_diff.py  test_export.py  test_import_.py  test_rollback.py  test_sessions.py  test_staging.py  test_validate.py
tests/unit/cli/: test_app.py  test_main_entrypoint.py  test_output.py
tests/unit/common/: test_common_init.py  test_constants.py  test_exceptions.py  test_logging.py  test_types.py
tests/unit/gui/: test_main_window.py
(+61 files in other folders)
