[tool.poetry]
name = "doors-excel-tool"
version = "0.1.0"
description = "Bidirectional IBM DOORS ↔ Excel synchronisation tool"
authors = ["Taner Celikkiran <tanercelikkiran@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "doors_excel", from = "src" }]

[tool.poetry.scripts]
doors-excel = "doors_excel.__main__:app"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
loguru = "^0.7"
typer = { version = ">=0.13", extras = ["all"] }
pyside6 = "^6.7"
questionary = "^2.0"
rich = "^13.7"
qasync = ">=0.27"
pywin32 = { version = ">=306", markers = "sys_platform == 'win32'" }
jinja2 = "^3.1"
openpyxl = "^3.1"
pandas = "^2.2"
mistune = "^3.0"
rtfparse = "^0.9"
striprtf = ">=0.0.26"
networkx = "^3.3"
tenacity = "^8.3"
pydantic = "^2.7"
pydantic-settings = "^2.3"
jsonschema = "^4.22"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-mock = "^3.14"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
